Changelog
=========


3.2.7 (unreleased)
------------------

- Fix default tab key storage, so that it includes the user id.
  [jone]

- Adjust french translation.
  [philippegross]

- Add English translations.
  [jone]

- Add functionality for setting the default tab of a tabbed view.
  [jone]

- Change dictstorage to adapt IBrowserView instead of IListingView.
  [jone]

- Add a per-tab menu for actions such as resetting the extjs table state.
  [jone]

- Filtering: do not reload when moving cursor in the filter box.
  [jone]

- Keep height while loading tab. This reduces content height flickering.
  [jone]

- Quickupload: Limit simultaneous uploads to 1 (sequential) to avoid DB conflicts
  [lgraf]

- Prevent default in js-action for ViewChooser-links.
  [Julian Infanger]

- Fix batching expression for compatibility with plone4.2rc2 and newer.
  [jone]

- Fixed definition of ITabbedView.quickupload_addable_types
  schema.List fields always need a value_type
  [lukasg]


3.2.6 (2012-05-24)
------------------

- Make quickupload work bhind a proxy
  (url in value of hidden field will no be rewritten.)
  [mathias.leimgruber]


3.2.5 (2012-05-24)
------------------

- Fix upload js for IE8.
  [mathias.leimgruber]


3.2.4 (2012-05-22)
------------------

- Bugfix: fix sorting in grid state when it is wrong.
  [jone]


3.2.3 (2012-05-09)
------------------

- Use same markup in batching like plone.
  [Julian Infanger]

- Add meta:provides ftw.tabbedview3 for zcml:conditions.
  [jone]

- Setting 'X-Theme-Disabled' header in ListingView response for HTML fragment
  [lgraf]

- Added 'ajax_load' parameter to listing request.
  [lgraf]

- Setting correct Content-Type header for JSON response from ListingView.
  [lgraf]


3.2.2 (2012-04-23)
------------------

- Added CSS classes to brackets, which indicates the current page in
  batching.pt
  [mathias.leimgruber]


3.2.1 (2012-04-05)
------------------

- Replace some $ by jq in tabbedview.js.
 [mathias.leimgruber]

